JBPM-5050 and BZ1324245 - Fix compact menu positioning and product styling on small resolution

--- a/kie-drools-wb/kie-drools-wb-webapp/src/main/resources/org/kie/workbench/drools/public/css/kie-drools-wb.css
+++ b/kie-drools-wb/kie-drools-wb-webapp/src/main/resources/org/kie/workbench/drools/public/css/kie-drools-wb.css
@@ -519,3 +519,17 @@ a.serviceTab:active {
     height: auto;
     border: 1px solid #ccc;
 }
+
+.navbar-pf .navbar-nav.uf-navbar-nav-compact {
+    left: 170px;
+    top: -25px;
+    position: absolute;
+}
+
+@media (max-width: 767px) {
+    .navbar-pf .navbar-nav.uf-navbar-nav-compact {
+        position: relative;
+        top: 0px;
+        left: 0px;
+    }
+}
